samples/_failures_safe/1761307094_01e4d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f045184.c: In function ‘main’:
./samples/SAFE/__tmp_2f045184.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("Decompression failed.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2f045184.c:139:9: error: expected declaration or statement at end of input
